edits in randomGraph

--- a/lpmaker/graphs/RandomRegularGraph.template
+++ b/lpmaker/graphs/RandomRegularGraph.template
@@ -1019,7 +1019,7 @@ public int svrtoswitch(int i)	//i is the server index. return the switch index.
 
 				int idegree=0; // the current degree of node i
 				int iter=0; //the # of attempts
-				int mom_i_found_it=0;
+				int foundSuitableLink=0;
 				//we want to break "degree/2" edges
 				//suppose we choose edge (a,b) to break, then following three conditions has to meet:
 				//1) (a,b) has an edge
@@ -1084,11 +1084,11 @@ public int svrtoswitch(int i)	//i is the server index. return the switch index.
 						//System.out.println("ADD: ("+ fish + ", " + p2 + ")");
 						//System.out.println("RM : ("+  p1  + ", " + p2 + ")");
 
-						mom_i_found_it = 1;
+						foundSuitableLink = 1;
 					}
 				}
-				if(mom_i_found_it==0){	// Give up if can't find a proper link
-					System.out.println("WARNING: Dad, this is so weird");
+				if(foundSuitableLink==0){	// Give up if can't find a proper link
+					System.out.println("WARNING: can't find suitable link");
 					//return;
 				}
 			}
@@ -1209,7 +1209,7 @@ public int svrtoswitch(int i)	//i is the server index. return the switch index.
 				//System.out.println("Second stage. mode=" + mode + ", ex_size=" + ex_size);
 				int idegree=0; // the current degree of node i
 				int iter=0; //the # of attempts
-				int mom_i_found_it=0;
+				int foundSuitableLink=0;
 				//we want to break "degree/2" edges
 				//suppose we choose edge (a,b) to break, then following three conditions has to meet:
 				//1) (a,b) has an edge
@@ -1274,11 +1274,11 @@ public int svrtoswitch(int i)	//i is the server index. return the switch index.
 						//System.out.println("ADD: ("+ fish + ", " + p2 + ")");
 						//System.out.println("RM : ("+  p1  + ", " + p2 + ")");
 
-						mom_i_found_it = 1;
+						foundSuitableLink = 1;
 					}
 				}
-				if(mom_i_found_it==0){	// Give up if can't find a proper link
-					System.out.println("WARNING: Dad, this is so weird");
+				if(foundSuitableLink==0){	// Give up if can't find a proper link
+					System.out.println("WARNING: can't find suitable link");
 					//return;
 				}
 			}
@@ -1428,7 +1428,7 @@ public int svrtoswitch(int i)	//i is the server index. return the switch index.
 
 				int idegree=0; // the current degree of node i
 				int iter=0; //the # of attempts
-				int mom_i_found_it=0;
+				int foundSuitableLink=0;
 				//we want to break "degree/2" edges
 				//suppose we choose edge (a,b) to break, then following three conditions has to meet:
 				//1) (a,b) has an edge
@@ -1493,11 +1493,11 @@ public int svrtoswitch(int i)	//i is the server index. return the switch index.
 						//System.out.println("ADD: ("+ fish + ", " + p2 + ")");
 						//System.out.println("RM : ("+  p1  + ", " + p2 + ")");
 
-						mom_i_found_it = 1;
+						foundSuitableLink = 1;
 					}
 				}
-				if(mom_i_found_it==0){	// Give up if can't find a proper link
-					System.out.println("WARNING: Dad, this is so weird");
+				if(foundSuitableLink==0){	// Give up if can't find a proper link
+					System.out.println("WARNING: can't find suitable link");
 					//return;
 				}
 			}
@@ -1739,7 +1739,7 @@ public int svrtoswitch(int i)	//i is the server index. return the switch index.
 
 				int idegree=0; // the current degree of node i
 				int iter=0; //the # of attempts
-				int mom_i_found_it=0;
+				int foundSuitableLink=0;
 				//we want to break "degree/2" edges
 				//suppose we choose edge (a,b) to break, then following three conditions has to meet:
 				//1) (a,b) has an edge
@@ -1804,11 +1804,11 @@ public int svrtoswitch(int i)	//i is the server index. return the switch index.
 						//System.out.println("ADD: ("+ fish + ", " + p2 + ")");
 						//System.out.println("RM : ("+  p1  + ", " + p2 + ")");
 
-						mom_i_found_it = 1;
+						foundSuitableLink = 1;
 					}
 				}
-				if(mom_i_found_it==0){	// Give up if can't find a proper link
-					System.out.println("WARNING: Dad, this is so weird");
+				if(foundSuitableLink==0){	// Give up if can't find a proper link
+					System.out.println("WARNING: can't find suitable link");
 					//return;
 				}
 			}
@@ -2055,7 +2055,7 @@ public int svrtoswitch(int i)	//i is the server index. return the switch index.
 
 				int idegree=0; // the current degree of node i
 				int iter=0; //the # of attempts
-				int mom_i_found_it=0;
+				int foundSuitableLink=0;
 				//we want to break "degree/2" edges
 				//suppose we choose edge (a,b) to break, then following three conditions has to meet:
 				//1) (a,b) has an edge
@@ -2120,11 +2120,11 @@ public int svrtoswitch(int i)	//i is the server index. return the switch index.
 						//System.out.println("ADD: ("+ fish + ", " + p2 + ")");
 						//System.out.println("RM : ("+  p1  + ", " + p2 + ")");
 
-						mom_i_found_it = 1;
+						foundSuitableLink = 1;
 					}
 				}
-				if(mom_i_found_it==0){	// Give up if can't find a proper link
-					System.out.println("WARNING: Dad, this is so weird");
+				if(foundSuitableLink==0){	// Give up if can't find a proper link
+					System.out.println("WARNING: can't find suitable link");
 					//return;
 				}
 			}
